# airbnb_backend

./: db.sqlite3  dd.py  pyproject.toml  코드챌린지
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py
categories/: .py  admin.py  models.py  serializers.py  tests.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py  tests.py
config/: authentication.py  schema.py  settings.py  urls.py
directmessages/: admin.py  apps.py  models.py
directmessages/migrations/: 0001_initial.py
experiences/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_perk_category.py  0003_remove_perk_category_experience_category.py  0004_rename_start_at_experience_start.py
medias/: models.py  serializers.py  tests.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_experience_and_more.py  0003_alter_photo_file_alter_video_file.py  0004_rename_descriptions_photo_description.py  0005_alter_photo_room.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_room.py
rooms/: admin.py  models.py  serializers.py  tests.py  title  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_amenity_description.py  0004_room_name.py  0005_alter_amenity_options_rename_print_room_price.py  0006_rename_toilts_room_toilets.py  (+1 more)
users/: admin.py  models.py  tests.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+6 files in other folders)
